--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,28 @@
 
     <Button
         android:id="@+id/btnConnect"
-        android:layout_width="406dp"
-        android:layout_height="147dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="connect"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="-2dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnSend"
+        tools:layout_editor_absoluteY="28dp" />
 
     <Button
         android:id="@+id/btnSend"
-        android:layout_width="136dp"
-        android:layout_height="373dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Send"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="-1dp" />
+        app:layout_constraintEnd_toStartOf="@+id/btnConnect"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="28dp" />
 
 </android.support.constraint.ConstraintLayout>
