--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,40 +10,38 @@
         android:id="@+id/btnConnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:text="connect"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnSend"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="161dp" />
 
     <Button
         android:id="@+id/btnSend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Send"
-        app:layout_constraintEnd_toStartOf="@+id/btnConnect"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        android:layout_width="268dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="12dp"
+        android:text="SHOOT"
+        app:layout_constraintTop_toBottomOf="@+id/btnConnect"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="71dp" />
+
+    <Button
+        android:id="@+id/btnSwitch"
+        android:layout_width="268dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="8dp"
+        android:text="SWITCH"
+        app:layout_constraintTop_toBottomOf="@+id/btnSend"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="71dp" />
 
     <TextView
         android:id="@+id/textY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textZ"
         app:layout_constraintTop_toBottomOf="@+id/textX"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="176dp" />
@@ -52,10 +50,11 @@
         android:id="@+id/textZ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="TextView"
+        app:layout_constraintTop_toBottomOf="@+id/btnSwitch"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="227dp" />
+        tools:layout_editor_absoluteX="176dp" />
 
     <TextView
         android:id="@+id/textX"
@@ -63,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@+id/btnSend"
+        app:layout_constraintTop_toBottomOf="@+id/textZ"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="176dp" />
 
