--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,61 +10,73 @@
         android:id="@+id/btnConnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="161dp"
+        android:layout_marginLeft="161dp"
         android:layout_marginTop="16dp"
         android:text="connect"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="161dp" />
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btnSend"
         android:layout_width="268dp"
         android:layout_height="180dp"
+        android:layout_marginStart="71dp"
+        android:layout_marginLeft="71dp"
         android:layout_marginTop="12dp"
         android:text="SHOOT"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnConnect"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="71dp" />
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btnSwitch"
         android:layout_width="268dp"
         android:layout_height="180dp"
+        android:layout_marginStart="71dp"
+        android:layout_marginLeft="71dp"
         android:layout_marginTop="8dp"
         android:text="SWITCH"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSend"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="71dp" />
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="176dp"
+        android:layout_marginLeft="176dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textX"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="176dp" />
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textZ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="176dp"
+        android:layout_marginLeft="176dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSwitch"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="176dp" />
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textX"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="176dp"
+        android:layout_marginLeft="176dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textZ"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="176dp" />
+        tools:ignore="MissingConstraints" />
 
 
 </android.support.constraint.ConstraintLayout>
