--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,25 +22,21 @@
         android:id="@+id/btnSend"
         android:layout_width="268dp"
         android:layout_height="180dp"
-        android:layout_marginStart="71dp"
-        android:layout_marginLeft="71dp"
         android:layout_marginTop="12dp"
         android:text="SHOOT"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnConnect"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="71dp" />
 
     <Button
         android:id="@+id/btnSwitch"
         android:layout_width="268dp"
         android:layout_height="180dp"
-        android:layout_marginStart="71dp"
-        android:layout_marginLeft="71dp"
         android:layout_marginTop="8dp"
         android:text="SWITCH"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSend"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="71dp" />
 
     <TextView
         android:id="@+id/textY"
@@ -88,15 +84,6 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textY" />
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/layout1"
-        android:layout_width="400dp"
-        android:layout_height="376dp"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="76dp">
-
-    </android.support.constraint.ConstraintLayout>
 
 
 </android.support.constraint.ConstraintLayout>
